Correção de métodos deprecated nos conversores